--- a/src/main/resources/templates/anunturi.html
+++ b/src/main/resources/templates/anunturi.html
@@ -45,115 +45,59 @@
     </div>
     <div class="container">
         <div class="heading_container heading_center">
-            <h2>
-                LOOKING FOR EXPERTS?
-            </h2>
-            <p>
-                Lorem ipsum dolor sit amet, non odio tincidunt ut ante, lorem a euismod suspendisse vel, sed quam nulla mauris
-                iaculis. Erat eget vitae malesuada, tortor tincidunt porta lorem lectus.
-            </p>
+            <h2>Cauta meseriasi</h2>
+            <form action="#" th:action="@{/search}" method="get">
+                <div class="form-row">
+                    <div class="form-group col-md-4">
+                        <select class="form-control nice-select"> <!--th:field="*{}"-->
+                            <option value="">Select Service</option>
+                            <!-- Iterează prin servicii disponibile -->
+                            <option th:each="serviciu : ${servicii}" th:value="${serviciu.id}" th:text="${serviciu.nume}"></option>
+                        </select>
+                    </div>
+                    <div class="form-group col-md-4">
+                        <select class="form-control nice-select"> <!--th:field="*{localizare}"-->>
+                            <option value="">Select Location</option>
+                            <!-- Iterează prin localități disponibile -->
+                            <option th:each="loc : ${localitati}" th:value="${loc.id}" th:text="${loc.nume}"></option>
+                        </select>
+                    </div>
+                    <div class="form-group col-md-4">
+                        <select class="form-control nice-select"> <!--th:field="*{reviewStars}"-->
+                            <option value="">Select Rating</option>
+                            <option value="1">1 Star</option>
+                            <option value="2">2 Stars</option>
+                            <option value="3">3 Stars</option>
+                            <option value="4">4 Stars</option>
+                            <option value="5">5 Stars</option>
+                        </select>
+                    </div>
+                </div>
+                <button type="submit" class="btn">Search</button>
+            </form>
         </div>
-        <div class="row">
-            <div class="col-md-6 col-lg-4 mx-auto">
-                <div class="box">
-                    <div class="img-box">
-                        <img src="../static/images/e1.jpg" alt="">
-                    </div>
-                    <div class="detail-box">
-                        <a href="">
-                            Martin Anderson
-                        </a>
-                        <h6 class="expert_position">
-                <span>
-                  Web Anaylzer
-                </span>
-                            <span>
-                  41 Jobs Done
-                </span>
-                        </h6>
-                        <span class="expert_rating">
-                <i class="fa fa-star" aria-hidden="true"></i>
-                <i class="fa fa-star" aria-hidden="true"></i>
-                <i class="fa fa-star" aria-hidden="true"></i>
-                <i class="fa fa-star" aria-hidden="true"></i>
-                <i class="fa fa-star" aria-hidden="true"></i>
-              </span>
-                        <p>
-                            Lorem ipsum dolor sit amet, non odio tincidunt ut ante, lorem a euismod suspendisse vel, sed quam
-                            nulla
-                            mauris iaculis.
-                        </p>
+            <div th:if="${anunturi.isEmpty()}" class="alert alert-info text-center">
+                <strong>Nu este nimic conform cerințelor dvs.</strong>
+            </div>
+
+            <div class="row" th:unless="${anunturi.isEmpty()}">
+                <div th:each="anunt : ${anunturi}" class="col-md-6 col-lg-4 mx-auto">
+                    <div class="box">
+                        <div class="detail-box">
+                            <a th:href="@{'/meserias/' + ${anunt.iduser}}">
+                                <h5 th:text="${anunt.numeAnunt}">Nume Meseriaș</h5>
+                            </a>
+                            <p th:text="${anunt.descriereAnunt}">Descriere...</p>
+                            <p th:text="${anunt.localizare}">Localitate</p>
+                            <p th:text="${anunt.numarTelefon}">Numar Telefon</p>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 col-lg-4 mx-auto">
-                <div class="box">
-                    <div class="img-box">
-                        <img src="../static/images/e2.jpg" alt="">
-                    </div>
-                    <div class="detail-box">
-                        <a href="">
-                            Semanta Klores
-                        </a>
-                        <h6 class="expert_position">
-                <span>
-                  Graphic Designer
-                </span>
-                            <span>
-                  32 Jobs Done
-                </span>
-                        </h6>
-                        <span class="expert_rating">
-                <i class="fa fa-star" aria-hidden="true"></i>
-                <i class="fa fa-star" aria-hidden="true"></i>
-                <i class="fa fa-star" aria-hidden="true"></i>
-                <i class="fa fa-star" aria-hidden="true"></i>
-                <i class="fa fa-star" aria-hidden="true"></i>
-              </span>
-                        <p>
-                            Lorem ipsum dolor sit amet, non odio tincidunt ut ante, lorem a euismod suspendisse vel, sed quam
-                            nulla
-                            mauris iaculis.
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-4 mx-auto">
-                <div class="box">
-                    <div class="img-box">
-                        <img src="../static/images/e3.jpg" alt="">
-                    </div>
-                    <div class="detail-box">
-                        <a href="">
-                            Ryan Martines
-                        </a>
-                        <h6 class="expert_position">
-                <span>
-                  SEO Expert
-                </span>
-                            <span>
-                  27 Jobs Done
-                </span>
-                        </h6>
-                        <span class="expert_rating">
-                <i class="fa fa-star" aria-hidden="true"></i>
-                <i class="fa fa-star" aria-hidden="true"></i>
-                <i class="fa fa-star" aria-hidden="true"></i>
-                <i class="fa fa-star" aria-hidden="true"></i>
-                <i class="fa fa-star" aria-hidden="true"></i>
-              </span>
-                        <p>
-                            Lorem ipsum dolor sit amet, non odio tincidunt ut ante, lorem a euismod suspendisse vel, sed quam
-                            nulla
-                            mauris iaculis.
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
+
         <div class="btn-box">
             <a href="">
-                View All Freelancers
+                Next Page
             </a>
         </div>
     </div>
@@ -162,90 +106,7 @@
 <!-- end expert section -->
 
 <!-- info section -->
-<section class="info_section ">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-2 info_links">
-                <h4>
-                    Menu
-                </h4>
-                <ul>
-                    <li>
-                        <a href="index.html">
-                            Home
-                        </a>
-                    </li>
-                    <li>
-                        <a href="about.html">
-                            About
-                        </a>
-                    </li>
-                    <li>
-                        <a href="job.html">
-                            Jobs
-                        </a>
-                    </li>
-                    <li>
-                        <a class="active" href="freelancer.html">
-                            Freelancers
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <div class="col-md-3">
-                <h4>
-                    Jobs
-                </h4>
-                <p>
-                    Established fact that a reader will be distracted by the readable content of a page when looking at its
-                    layout. The point of using Lorem Ipsum
-                </p>
-            </div>
-            <div class="col-md-3">
-                <div class="info_social">
-                    <h4>
-                        Social Link
-                    </h4>
-                    <div class="social_container">
-                        <div>
-                            <a href="">
-                                <i class="fa fa-facebook" aria-hidden="true"></i>
-                            </a>
-                        </div>
-                        <div>
-                            <a href="">
-                                <i class="fa fa-twitter" aria-hidden="true"></i>
-                            </a>
-                        </div>
-                        <div>
-                            <a href="">
-                                <i class="fa fa-linkedin" aria-hidden="true"></i>
-                            </a>
-                        </div>
-                        <div>
-                            <a href="">
-                                <i class="fa fa-instagram" aria-hidden="true"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="info_form">
-                    <h4>
-                        Newsletter
-                    </h4>
-                    <form action="">
-                        <input type="text" placeholder="Enter Your Email" />
-                        <button type="submit">
-                            Subscribe
-                        </button>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
+<div th:replace="~{/navbar.html ::footer}"></div>
 <!-- end info_section -->
 
 <!-- footer section -->
