--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -46,7 +46,7 @@
                             <button type="submit" value="Log in" class="btn btn-primary btn-block">Login</button>
                         </div>
                     </form>
-                    <button th:href="@{/register}" class="btn btn-secondary">Inregistreaza-te aici!</button>
+                    <a th:href="@{/register}" class="btn btn-secondary">Inregistreaza-te aici!</a>
                 </div>
             </div>
         </div>
@@ -68,7 +68,7 @@
 <!-- end footer section -->
 
 <!-- jQery -->
-<script src="/static/js/jquery-3.4.1.min.js" type="text/javascript"></script>
+<script src="/static/js/jquery-3.7.1.min.js" type="text/javascript"></script>
 <!-- bootstrap js -->
 <script src="/static/js/bootstrap.js"></script>
 <!-- custom js -->
